# AMLConsortiumNetwork

./: .dockerignore  .env.example  .gitignore  README.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
acn/: __init__.py  redis_client.py
acn/casemgmt/: __init__.py  case.py  resolve.py  store.py  str_draft.py
acn/data/: __init__.py  cluster.py  load.py  partition.py  report.py  sample.py  schema.py  split_windows.py
acn/explain/: __init__.py  evidence.py  gnn_explainer.py
acn/gnn/: __init__.py  features.py  graph_build.py  metrics.py  model.py
acn/graph/: __init__.py  alert.py  chain_features.py  db.py  ingest.py  routing.py  score.py  ttl.py
acn/graph/layers/: __init__.py  fan_out.py  (+5 more)
acn/pseudonymise/: __init__.py  buckets.py  commitments.py  consumer.py  edge.py  hashing.py  producer.py
config/: redis.conf
config/kafka/: client-ssl.properties.example
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
scripts/: build_dataset.py  build_resolve_map.py  create-topics.sh  gen_certs.sh  measure_lift.py  neo4j_schema.cypher  replay_producer.py  run_graph_engine.py  run_pipeline_e2e.sh  set-acls.sh  train_gnn.py
services/: __init__.py
services/api/: Dockerfile  __init__.py  cases.py  health.py  main.py
tests/: conftest.py  test_casemgmt.py  test_cases_api.py  test_chain_features.py  test_data_foundation.py  test_explain.py  test_gnn.py  test_graph_engine.py  test_pseudonymise.py  test_setup.py
(+4 files in other folders)
